# kode

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  LICENSE  README.md  SECURITY.md  flake.nix
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: CLI.md  README.md
src/: cli.rs  config.rs  lib.rs  main.rs
src/cache/: hash.rs  mod.rs  query.rs  revalidate.rs  schema.rs  summarize.rs  symbols.rs
src/cache/queries/: c.scm  cpp.scm  csharp.scm  go.scm  java.scm  javascript.scm  python.scm  ruby.scm  rust.scm  typescript.scm
src/chat/: commands.rs  mod.rs  prompt.rs  render.rs  spinner.rs  tools.rs  ui.rs
src/commands/: cache.rs  chat.rs  config.rs  info.rs  mcp.rs  mod.rs  scan.rs
src/fs/: mod.rs  read.rs  search.rs  stats.rs  walker.rs
src/mcp/: agent.rs  agent_tools.rs  evidence.rs  http.rs  mod.rs  protocol.rs  server.rs  stdio.rs  tools.rs
src/project/: banner.rs  git.rs  manifest.rs  manifest_parse.rs  mod.rs  parse.rs  run_config.rs
