[package]
name = "kode"
version = "0.1.0"
edition = "2024"
authors = ["Akash Lohar <akashlohar1047@gmail.com>"]
description = "Codebase evidence service for humans and AI agents — browsable docs plus MCP server for agent queries"
license = "MIT"
repository = "https://github.com/akash1047/kode"
documentation = "https://docs.rs/kode"
keywords = ["mcp", "codebase", "ai", "agent", "cli"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# Project scan
ignore = "0.4"
regex = "1"

# Agent framework
adk-rust = { version = "0.9", features = ["standard"] }
adk-core = "0.9"
adk-model = { version = "0.9", features = ["openai"] }
adk-tool = "0.9"

# Async runtime
tokio = { version = "1.40", features = ["full"] }
futures = "0.3"

# Serde + schema
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"

anyhow = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Summarization (drawer 3) — HTTP to OpenAI-compatible endpoint
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Polished REPL
reedline = "0.48"
crossterm = "0.29"
nu-ansi-term = "0.50"
termimad = "0.31"

# Cache (drawer 1)
rusqlite = { version = "0.32", features = ["bundled"] }
xxhash-rust = { version = "0.8", features = ["xxh3"] }
dirs = "5"
toml = "0.8"
serde_yaml = "0.9"
rayon = "1"

# Symbols (drawer 2)
tree-sitter = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-python = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-go = "0.23"
tree-sitter-java = "0.23"
tree-sitter-c = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-ruby = "0.23"
tree-sitter-c-sharp = "0.23"

# MCP HTTP transport
axum = "0.7"
